--- a/views-control plagas/views/login.html
+++ b/views-control plagas/views/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="/assets/css/login.css" />
 </head>
 <body>
     <section class="seccion-login">
@@ -23,10 +23,10 @@
             </form>
         </div>
         <div class="contenedor-logo">
-            <img class="logo" src="img/LOGO-CONTROLDEPLAGAS.PNG" alt="" />
+            <img class="logo" src="/img/LOGO-CONTROLDEPLAGAS.PNG" alt="" />
         </div>
     </section>
-    <script src="validacion-login.js"></script>
+    <script src="/js/validacion-login.js"></script>
 </body>
 </html>
 
